# internal/server/cmdserver/handler.go
@@ -135,8 +135,8 @@ func handleVersion(handler Handler) HandleFunc {
 
 func handleInterfaceList(handler Handler) HandleFunc {
 	return func(cmd *cobra.Command, args []string) error {
-		for _, name := range handler.ListInterfaces() {
-			cmd.Println(name)
+		for _, i := range handler.ListInterfaces() {
+			cmd.Printf("%-4d %-8s %-18s %-5d %v\n", i.Index, i.Name, i.MAC, i.MTU, i.Flags)
 		}
 		return nil
 	}
